# tsp-heuristic-analysis

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
benchmark/: CMakeLists.txt  config_reader.cc  config_reader.h  main.cc  results_writer.cc  results_writer.h  runner.cc  runner.h
benchmark/configs/: bench1.conf  bench2.conf  bench3.conf  bench_all_100.conf  bench_all_1000.conf  bench_all_1000_1.conf  bench_all_1000_1_2.conf  bench_all_1000_2.conf  bench_all_1000_2_2.conf  bench_all_1000_3.conf  bench_all_1000_3_2.conf  bench_all_1000_4.conf  bench_all_1000_4_2.conf  bench_all_200.conf  bench_all_2000.conf  bench_all_2000_1.conf  bench_all_2000_2.conf  bench_all_2000_3.conf  bench_all_2000_4.conf  bench_all_500.conf  bench_all_500_1.conf  bench_all_500_1_2.conf  bench_all_500_2.conf  bench_all_500_2_2.conf  bench_all_500_3_2.conf  bench_all_500_4.conf  bench_all_50_100_200.conf  bench_all_5_10_20.conf  bench_all_big.conf  bench_all_small.conf  bench_brute.conf  bench_constructive_VLSI.conf  bench_constructive_art.conf  bench_constructive_countries.conf  bench_constructive_random.conf  bench_constructive_random_large.conf  bench_lux_1.conf  bench_lux_2.conf  bench_lux_3.conf  bench_lux_4.conf  (+1 more)
solver/: Algorithm.h  Algorithms.cpp  Algorithms.h  CMakeLists.txt  GeneratorRandom.cpp  GeneratorRandom.h  Solver.cpp  Solver.h  State.cpp  State.h  TSPState.cpp  TSPState.h  TSPWorldGenerator.h  Test.cpp  WorldGenerator.h  WorldGenerators.cpp  WorldGenerators.h  alfa_improved_measure.cc  alfa_improved_measure.h  alfa_measure.cc  alfa_measure.h  algorithm.cc  algorithm.h  ant_colony_improvement_algorithm.cc  ant_colony_improvement_algorithm.h  brute_force_constructive_algorithm.cc  brute_force_constructive_algorithm.h  christofides_constructive_algorithm.cc  christofides_constructive_algorithm.h  classic_measure.cc  classic_measure.h  constructive_algorithm.cc  constructive_algorithm.h  controller.cc  controller.h  convex_hull_lower_bound_algorithm.cc  convex_hull_lower_bound_algorithm.h  euclidean_world_generator.cc  euclidean_world_generator.h  file_euclidean_world_generator.cc  (+45 more)
solver/test/: alfa_measure_test.cc  all_tests.cc  ant_colony_improvement_algorithm_test.cc  controller_test.cc  euclidean_world_generator_test.cc  file_euclidean_world_generator_test.cc  held_karp_lower_bound_algorithm_test.cc  kopt2_improvement_algorithm_test.cc  kopt2_search_improvement_algorithm_test.cc  min_1tree_lower_bound_algorithm_test.cc  random_constructive_algorithm_test.cc  random_euclidean_world_generator_test.cc  solver_test.cc  state_test.cc
solver/test_data/art/: courbet180K.tsp  earring200K.tsp  pareja160K.tsp
solver_old/: Algorithm.h  Algorithms.cpp  Algorithms.h  CMakeLists.txt  Solver.h  SolverCallback.cpp  SolverCallback.h  State.h  WorldGenerator.h  WorldGenerators.cpp  WorldGenerators.h  util.cpp  util.h
test_data/art/: venus140K.tsp
tspgui/: .gitignore
tspgui/tspgui/: edge.cpp  edge.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  tsp_util.cpp  tsp_util.h  tspgui.pro  tspview.cpp  tspview.h
tspgui_old/tspgui/: edge.cpp  edge.h  mainwindow.cpp  mainwindow.h  tspgui.pro
util/: CMakeLists.txt  command_line_arguments.cc  command_line_arguments.h  container_contains.h  disjoint_set.cc  disjoint_set.h  double_compare.h  matrix.cc  matrix.h  mst.cc  mst.h  pair_hash.h  point2.cc  point2.h  point3.h  random.cc  random.h  split_str.cc  split_str.h  square_matrix.h  tsplib_parser.cc  tsplib_parser.h  vector_util.h
